# mochi-carry-signal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  litestream.yml  pyproject.toml  run.py
mochi_carry_signal/: __init__.py  approval.py  chart.py  config.py  db.py  models.py  notifier.py  pm_client.py  poller.py  run.py  signal.py  web.py
mochi_carry_signal/data/: __init__.py  hyperliquid.py
mochi_carry_signal/templates/: dashboard.html
tests/: conftest.py  test_approval.py  test_chart.py  test_config_data.py  test_notifier.py  test_pm_contract.py  test_poller.py  test_signal.py  test_web.py
